<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03071C">

    <TextView
        android:id="@+id/adult_text"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="40dp"
        android:text="@string/adult_price_text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/child_text"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/child_price_text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/senior_text"
        app:layout_constraintTop_toBottomOf="@+id/senior_text" />

    <TextView
        android:id="@+id/ticketPrice"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginTop="216dp"
        android:hint="Ticket Price  $"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#D0FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/sales_tax"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:hint="Sales Tax : $"
        android:textAlignment="center"
        android:textColorHint="#D0FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/ticketPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ticketPrice"
        app:layout_constraintTop_toTopOf="@+id/ticketPrice" />

    <TextView
        android:id="@+id/ticket_total"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:hint="Ticket Total : $"
        android:textAlignment="center"
        android:textColorHint="#E9FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sales_tax"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sales_tax"
        app:layout_constraintTop_toTopOf="@+id/sales_tax"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/museumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Museum"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C4FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="203dp"
        android:layout_height="216dp"
        android:outlineProvider="none"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/adult_prices"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/adult_text"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Spinner
        android:id="@+id/senior_prices"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="56dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/adult_prices"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/senior_text"
        app:layout_constraintTop_toTopOf="@+id/adult_prices" />

    <Spinner
        android:id="@+id/child_prices"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/senior_prices"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/child_text"
        app:layout_constraintTop_toBottomOf="@+id/senior_prices" />

    <TextView
        android:id="@+id/senior_text"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/senior_price_text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/adult_text"
        app:layout_constraintTop_toBottomOf="@+id/adult_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="236dp"
        android:text="@string/ticket_total"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:text="@string/sales_tax"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginTop="128dp"
        android:text="@string/total_price"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>